after lots of fixes

--- a/app/src/main/res/layout/activity_forgot_password_message.xml
+++ b/app/src/main/res/layout/activity_forgot_password_message.xml
@@ -35,6 +35,7 @@
                 android:src="@drawable/ic_forgot_password2" />
 
             <TextView
+                android:id="@+id/check"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -47,6 +48,7 @@
                 android:textSize="12sp" />
 
             <TextView
+                android:id="@+id/sent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="33dp"
