--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -52,7 +52,7 @@
 
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
         <item name="android:textSize">12sp</item>
-        <item name="fontWeight">1500</item>
+        <item name="android:textStyle">bold</item>
         <item name="textAllCaps">false</item>
     </style>
 
