--- a/app/src/main/res/layout/fragment_fifth_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_fifth_on_boarding.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.OnBoarding.FifthOnBoarding">
 
 
@@ -13,135 +13,137 @@
         android:layout_marginHorizontal="17dp"
         android:layout_marginTop="28dp"
         android:layout_marginBottom="28dp"
+        android:background="@color/white"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        android:background="@color/white">
+        app:cardElevation="8dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/back_arrow4"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:src="@drawable/back_arrow"
-                />
-
-            <com.google.android.material.card.MaterialCardView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="13dp"
-                app:cardCornerRadius="8dp"
-                app:cardElevation="0dp"
-                android:layout_marginTop="23dp"
-                android:backgroundTint="#F4FDFF">
+                android:layout_margin="10dp"
+                android:orientation="vertical">
 
-                <LinearLayout
+                <ImageView
+                    android:id="@+id/back_arrow4"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/back_arrow" />
+
+                <com.google.android.material.card.MaterialCardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_marginHorizontal="13dp"
+                    android:layout_marginTop="20dp"
+                    android:backgroundTint="#F4FDFF"
+                    app:cardCornerRadius="8dp"
+                    app:cardElevation="0dp">
 
-                    <TextView
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Your Indian Virtual Address"
-                        android:gravity="center_horizontal"
-                        android:background="#11B5D2"
-                        android:paddingTop="14dp"
-                        android:paddingBottom="13dp"
-                        android:textSize="20sp"
-                        android:textColor="@color/white"
-                        android:textFontWeight="700"/>
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Name"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginTop="21dp"
-                        android:textSize="18sp"
-                        android:textFontWeight="600"
-                        android:textColor="@color/black"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="#11B5D2"
+                            android:gravity="center_horizontal"
+                            android:paddingTop="14dp"
+                            android:paddingBottom="13dp"
+                            android:text="Your Indian Virtual Address"
+                            android:textColor="@color/white"
+                            android:textFontWeight="700"
+                            android:textSize="20sp" />
 
-                    <TextView
-                        android:id="@+id/virtualAddressName"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text=""
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18sp"
-                        android:textFontWeight="500"
-                        android:textColor="@color/black"/>
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Address"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginTop="10dp"
-                        android:textSize="18sp"
-                        android:textFontWeight="600"
-                        android:textColor="@color/black"/>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
-                        android:layout_marginTop="10dp">
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-
-                            android:text="Locker No. "
-                            android:textSize="18sp"
-                            android:textFontWeight="500"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="18dp"
+                            android:text="Name"
                             android:textColor="@color/black"
-                            android:lineHeight="22dp"/>
+                            android:textFontWeight="600"
+                            android:textSize="18sp" />
+
                         <TextView
-                            android:id="@+id/lockerNo"
+                            android:id="@+id/virtualAddressName"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="18sp"
-                            android:textFontWeight="500"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="8dp"
+                            android:text=""
                             android:textColor="@color/black"
-                            android:lineHeight="22dp"/>
+                            android:textFontWeight="500"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="10dp"
+                            android:text="Address"
+                            android:textColor="@color/black"
+                            android:textFontWeight="600"
+                            android:textSize="18sp" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginTop="8dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+
+                                android:lineHeight="22dp"
+                                android:text="Locker No. "
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="18sp" />
+
+                            <TextView
+                                android:id="@+id/lockerNo"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:lineHeight="22dp"
+                                android:textColor="@color/black"
+                                android:textFontWeight="500"
+                                android:textSize="18sp" />
+                        </LinearLayout>
+
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="15dp"
+                            android:layout_marginRight="17dp"
+
+                            android:layout_marginBottom="15dp"
+                            android:lineHeight="22dp"
+                            android:text="@string/locker_no_sa_29j17_122545_indian_shoppre_llp_182_1st_floor_2nd_cross_rd_7th_main_koramangala_1st_block_bengaluru_karnataka_560_034"
+                            android:textColor="@color/black"
+                            android:textFontWeight="500"
+                            android:textSize="18sp" />
+
+
                     </LinearLayout>
 
 
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/locker_no_sa_29j17_122545_indian_shoppre_llp_182_1st_floor_2nd_cross_rd_7th_main_koramangala_1st_block_bengaluru_karnataka_560_034"
-                        android:layout_marginLeft="15dp"
-
-                        android:layout_marginRight="17dp"
-                        android:layout_marginBottom="15dp"
-                        android:textSize="18sp"
-                        android:textFontWeight="500"
-                        android:textColor="@color/black"
-                        android:lineHeight="22dp"/>
-
-
-                </LinearLayout>
-
-
-            </com.google.android.material.card.MaterialCardView>
-        </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="24dp"
+                android:layout_marginTop="10dp"
                 android:gravity="center"
-                android:layout_marginTop="40dp"
                 android:text="@string/use_this_address_to_shop_from_india"
                 android:textColor="@color/black"
                 android:textFontWeight="700"
@@ -152,11 +154,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="18dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="18dp"
-                android:letterSpacing="0.03"
-                android:layout_marginTop="40dp"
-
                 android:backgroundTint="@color/button_color"
+
+                android:letterSpacing="0.03"
                 android:paddingTop="13dp"
                 android:paddingBottom="14dp"
                 android:text="Start shopping"
