--- a/app/src/main/res/layout/fragment_order_summary.xml
+++ b/app/src/main/res/layout/fragment_order_summary.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Orders.OrderFragments.OrderSummaryFragment">
+    tools:context=".UI.Orders.OrderFragments.OrderSummaryFragment"
+    android:id="@+id/main">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,9 +15,9 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="24dp"
             app:cardCornerRadius="10dp"
-            app:cardElevation="4dp"
-            android:layout_margin="24dp">
+            app:cardElevation="4dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -27,11 +28,12 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="20dp"
                     android:text="Additional Options"
                     android:textColor="@color/black"
                     android:textFontWeight="700"
-                    android:textSize="14sp"
-                    android:layout_marginBottom="20dp"/>
+                    android:textSize="14sp" />
+
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycle"
                     android:layout_width="match_parent"
@@ -43,16 +45,17 @@
                     android:layout_height="37dp"
                     android:layout_marginHorizontal="80dp"
                     android:layout_marginTop="20dp"
+                    android:textFontWeight="700"
                     android:backgroundTint="@color/button_blue"
-                    android:text="Proceed"
-                    app:cornerRadius="5dp"
-                    android:textAllCaps="false"
-                    android:letterSpacing="0.03"
-                    android:layout_weight="700"
-                    android:textSize="12sp"
-                    android:textColor="@color/white"
                     android:insetTop="0dp"
-                    android:insetBottom="0dp"/>
+                    android:insetBottom="0dp"
+                    android:letterSpacing="0.03"
+                    android:text="Proceed"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    app:cornerRadius="5dp"
+                    />
 
             </LinearLayout>
 
