--- a/app/src/main/res/layout/add_address_title.xml
+++ b/app/src/main/res/layout/add_address_title.xml
@@ -3,9 +3,9 @@
     android:id="@+id/addAddressTitle"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center|center_vertical"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="5dp"
     android:text="Mr"
-    android:textSize="12sp"
     android:textFontWeight="500"
-    android:gravity="center"
-    android:paddingBottom="10dp"
-    android:paddingHorizontal="15dp"/>
+    android:textSize="12sp"/>
