--- a/app/src/main/res/layout/fragment_add_adress.xml
+++ b/app/src/main/res/layout/fragment_add_adress.xml
@@ -98,8 +98,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="30dp"
                             android:background="@null"
+                            android:dropDownWidth="75dp"
+                            android:overlapAnchor="false"
                             android:paddingLeft="0dp"
-                            android:overlapAnchor="false"/>
+                            android:popupBackground="@color/box_background_color"/>
 
                         <ImageView
                             android:layout_width="12dp"
@@ -109,7 +111,7 @@
                             android:layout_gravity="center_vertical"/>
 
                         <View
-                            android:layout_width="1dp"
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
                             android:background="@color/hint_color" />
 
