--- a/app/src/main/res/layout/title_spinner.xml
+++ b/app/src/main/res/layout/title_spinner.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/titleValue"
-   android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:gravity="center|center_vertical"
+    android:paddingHorizontal="15dp"
+    android:paddingVertical="5dp"
     android:text="Mr"
-    android:textSize="12sp"
     android:textFontWeight="500"
-    android:gravity="center"
-    android:paddingBottom="10dp"
-    android:paddingHorizontal="15dp"/>
+    android:textSize="12sp" />
