upload invoice card pending

--- a/app/src/main/res/layout/shiping_details_single_layout.xml
+++ b/app/src/main/res/layout/shiping_details_single_layout.xml
@@ -84,6 +84,7 @@
             android:id="@+id/viewPackage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="3dp"
             android:gravity="center_vertical">
 
         <TextView
