--- a/app/src/main/res/layout/fragment_locker_view_package.xml
+++ b/app/src/main/res/layout/fragment_locker_view_package.xml
@@ -342,6 +342,7 @@
                 </LinearLayout>
 
                 <com.google.android.material.button.MaterialButton
+                    android:id="@+id/uploadInvoiceBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:layout_gravity="center_vertical"
