--- a/app/src/main/res/layout/add_address_popup.xml
+++ b/app/src/main/res/layout/add_address_popup.xml
@@ -71,6 +71,7 @@
                         android:id="@+id/addressSpinner"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
+                        android:dropDownWidth="75dp"
                         android:background="@null"
                         android:overlapAnchor="false"
                         android:paddingLeft="0dp" />
