--- a/app/src/main/res/layout/view_photo_dialog.xml
+++ b/app/src/main/res/layout/view_photo_dialog.xml
@@ -162,11 +162,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="34dp"
                 android:layout_marginBottom="22dp"
-                android:text="Additional inspections are done while taking additional product images. We’ll inform you in case of any visual damages to the product."
+                android:text="Additional inspections are done while taking additional product images. We’ll inform you in case of any visual\ndamages to the product."
                 android:textColor="@color/black"
                 android:textFontWeight="500"
                 android:textSize="10sp"
-                android:visibility="gone" />
+                 />
 
         </LinearLayout>
 
