--- a/app/src/main/res/layout/fragment_thank_you.xml
+++ b/app/src/main/res/layout/fragment_thank_you.xml
@@ -44,7 +44,15 @@
                         android:textColor="@color/black"
                         android:textFontWeight="500"
                         android:textSize="12sp" />
-
+                    <TextView
+                        android:visibility="gone"
+                        android:id="@+id/paymentShipment"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Your payment for the shipment was successful. We will notify you once it has been dispatched."
+                        android:textColor="@color/black"
+                        android:textFontWeight="500"
+                        android:textSize="12sp" />
                     <TextView
                         android:id="@+id/shipment"
                         android:layout_width="wrap_content"
