--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -10,14 +10,14 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#1B274E</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:dropDownListViewStyle">@style/MySpinner</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
 
 
-        ////////////////////////
+
         <!-- Change Overflow Menu ListView Item Height & Property -->
         <item name="android:listPreferredItemHeightSmall">30dp</item>
         <item name="android:listPreferredItemPaddingLeft">5dp</item>
