--- a/app/src/main/res/layout/shiping_details_single_layout.xml
+++ b/app/src/main/res/layout/shiping_details_single_layout.xml
@@ -98,6 +98,7 @@
             android:layout_marginLeft="2dp"
             android:layout_width="16dp"
             android:layout_height="16dp"
+            android:layout_marginRight="4dp"
             android:src="@drawable/ic_arrow"/>
 
         </LinearLayout>
