--- a/app/src/main/res/layout/create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/create_shipment_delivery_address.xml
@@ -7,19 +7,20 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:layout_marginTop="39dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="23dp">
+                android:layout_marginLeft="23dp"
+                >
 
                 <RadioButton
                     android:id="@+id/radioBtn"
