--- a/app/src/main/res/layout/activity_sign_up_valid.xml
+++ b/app/src/main/res/layout/activity_sign_up_valid.xml
@@ -308,16 +308,37 @@
             </com.google.android.material.textfield.TextInputLayout>
 
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
+                android:orientation="horizontal"
                 android:layout_marginLeft="40dp"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="38dp"
-                android:text="@string/by_signing_"
-                android:textColor="@color/hint_color"
-                android:textSize="10sp" />
+                android:layout_gravity="left">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/by_signing_"
+                    android:textColor="@color/hint_color"
+                    android:textSize="9sp" />
+                <TextView
+                    android:id="@+id/terms"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/terms"
+                    android:textColor="@color/hint_color"
+                    android:textSize="9sp" />
+                <TextView
+                    android:id="@+id/privacy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/privacy"
+                    android:textColor="@color/hint_color"
+                    android:textSize="9sp" />
+            </LinearLayout>
+
+
 
             <include
                 android:id="@+id/signUpBtn"
