--- a/app/src/main/res/layout/create_ship_single_layout.xml
+++ b/app/src/main/res/layout/create_ship_single_layout.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
     android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:padding="25dp">
 
 
@@ -11,21 +11,21 @@
         android:id="@+id/check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"/>
+        android:layout_gravity="center_vertical" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_weight="1"
         android:layout_marginRight="10dp"
+        android:layout_weight="1"
         android:orientation="vertical">
-
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <TextView
                 android:id="@+id/webSiteName"
                 android:layout_width="wrap_content"
@@ -34,6 +34,7 @@
                 android:textColor="@color/black"
                 android:textFontWeight="500"
                 android:textSize="12sp" />
+
             <TextView
                 android:id="@+id/quantity"
                 android:layout_width="wrap_content"
@@ -55,7 +56,6 @@
             android:textSize="10sp" />
 
         <TextView
-            android:visibility="gone"
             android:id="@+id/damaged"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,10 +63,10 @@
             android:text="Contains Damaged Items"
             android:textColor="#FF0101"
             android:textFontWeight="500"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:visibility="gone" />
 
         <TextView
-            android:visibility="gone"
             android:id="@+id/restricted"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,9 +74,10 @@
             android:text="Contains Restricted Items"
             android:textColor="#FF0101"
             android:textFontWeight="500"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:visibility="gone" />
+
         <TextView
-            android:visibility="gone"
             android:id="@+id/both"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -84,7 +85,8 @@
             android:text="Contains Damaged &amp; \nRestricted Items"
             android:textColor="#FF0101"
             android:textFontWeight="500"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:visibility="gone" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -123,11 +125,11 @@
             android:layout_width="85dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginHorizontal="5dp"
             android:layout_marginTop="5dp"
             android:background="@drawable/order_placed_background"
             android:gravity="center"
             android:paddingVertical="3dp"
-            android:layout_marginHorizontal="5dp"
             android:text="Action Required"
             android:textColor="@color/action_required_yellow_color"
             android:textFontWeight="500"
@@ -139,16 +141,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:paddingRight="4dp"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:paddingRight="4dp">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="3dp"
+                android:paddingLeft="3dp"
                 android:text="View Package"
                 android:textColor="#3A5FD8"
-                android:paddingLeft="3dp"
-                android:layout_marginRight="3dp"
                 android:textFontWeight="500"
                 android:textSize="10sp" />
 
