--- a/app/src/main/res/layout/fragment_create_ship_request_summary.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request_summary.xml
@@ -120,16 +120,20 @@
                         android:id="@+id/useLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="22dp"
                         android:layout_marginTop="24dp">
 
-                        <CheckBox
+                        <androidx.appcompat.widget.AppCompatCheckBox
                             android:id="@+id/checkBoxCreateShipment"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical" />
+                            android:layout_width="24dp"
+                            android:layout_height="24dp"
+                            android:layout_gravity="center_vertical"
+                            android:button="@drawable/check_bg"
+                            android:scaleX="0.8"
+                            android:scaleY="0.8" />
 
                         <TextView
+                            android:layout_marginLeft="10dp"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
