--- a/app/src/main/res/layout/view_photo_dialog.xml
+++ b/app/src/main/res/layout/view_photo_dialog.xml
@@ -5,21 +5,30 @@
     android:layout_height="wrap_content"
     android:elevation="4dp"
     app:cardCornerRadius="10dp">
+
     <LinearLayout
         android:visibility="gone"
+        android:id="@+id/second"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:orientation="vertical"
+
         android:gravity="center"
-        android:id="@+id/second"
-        >
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_gravity="right"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/cross" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+
             android:gravity="center"
             android:text="@string/add_more_photo_text"
             android:textColor="@color/black"
@@ -41,10 +50,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
             android:gravity="center"
             android:text="Please note that Additional Photos are allowed only once per package"
             android:textColor="@color/black"
-            android:layout_marginTop="7dp"
             android:textFontWeight="500"
             android:textSize="10sp" />
 
@@ -85,6 +94,7 @@
     </LinearLayout>
 
     <LinearLayout
+
 
         android:id="@+id/main"
         android:layout_width="match_parent"
